--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["nodejs_20", "caddy"]
+nixPkgs = ["nodejs_20"]
 
 [phases.install]
 cmds = [
@@ -8,9 +8,8 @@ cmds = [
 
 [phases.build]
 cmds = [
-  "npm run build",
-  "caddy fmt --overwrite Caddyfile"
+  "npm run build"
 ]
 
 [start]
-cmd = "caddy run --config Caddyfile"
+cmd = "NODE_ENV=production node dist/index.js"
